--- a/action.yaml
+++ b/action.yaml
@@ -1,24 +1,27 @@
-# action.yml
+# github-action-docker-buildx-build.yml
 name: Run docker buildx build
 description: Prepare the environment and run docker buildx build.
 author: support@senzing.com
 
 inputs:
+   dockerBuildOptions:
+      description: Additional options to pass to docker buildx build
    dockerContext:
       default: "."
       description: Context (directory) of the docker build process
-   dockerOptions:
-      description: Additional options to pass to docker buildx build
+   dockerImageRepository:
+      description: Docker repository (e.g. senzing/senzingapi-runtime)
+      required: true
+   dockerImageTag:
+      default: ${{ github.ref_name }}
+      description: Docker image tag
    dockerPassword:
       default: ${{ secrets.DOCKERHUB_PASSWORD }}
       description: Password for Docker registry
    dockerPlatforms:
       default: linux/amd64
       description: Comma-separated list of docker platforms to build (hint - See output of docker buildx ls)
-   dockerRepository:
-      description: Docker repository (e.g. senzing/senzingapi-runtime)
-      required: true
-   dockerServer:
+   dockerRegistryServer:
       default: docker.io
       description: Docker registry server
    dockerUsername:
@@ -38,16 +41,19 @@ runs:
         uses: docker/setup-buildx-action@v3
       - name: Docker list platforms
         run: docker buildx ls
+        shell: bash
       - name: Dockerhub login
-        run: echo ${{ inputs.dockerPassword }} | docker login -u ${{ inputs.dockerUsername }} --password-stdin ${{ inputs.dockerServer }}
+        run: echo ${{ inputs.dockerPassword }} | docker login -u ${{ inputs.dockerUsername }} --password-stdin ${{ inputs.dockerRegistryServer }}
+        shell: bash
       - name: Docker build images
         run: |
            docker buildx build \
               --platform ${{ inputs.dockerPlatforms }} \
-              --tag ${{ inputs.dockerServer }}/${{ inputs.dockerRepository }}:${{ github.ref_name }} \
-              --tag ${{ inputs.dockerServer }}/${{ inputs.dockerRepository }}:latest \
-              ${{ inputs.dockerOptions }} \
+              --tag ${{ inputs.dockerRegistryServer }}/${{ inputs.dockerImageRepository }}:${{ inputs.dockerImageTag }} \
+              --tag ${{ inputs.dockerRegistryServer }}/${{ inputs.dockerImageRepository }}:latest \
+              ${{ inputs.dockerBuildOptions }} \
               ${{ inputs.dockerContext }}
+        shell: bash
 
 branding:
    icon: upload-cloud
