--- a/action.yaml
+++ b/action.yaml
@@ -35,6 +35,7 @@ runs:
         uses: actions/checkout@v4
         with:
            fetch-depth: "0"
+           submodules: recursive
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
