--- a/action.yaml
+++ b/action.yaml
@@ -16,7 +16,7 @@ inputs:
       default: latest
       description: Docker image tag
    password:
-      description: Password for Docker registry
+      description: Access Token for Docker registry
       required: true
    platforms:
       default: linux/amd64
@@ -44,8 +44,11 @@ runs:
         run: docker buildx ls
         shell: bash
       - name: Dockerhub login
-        run: echo ${{ inputs.password }} | docker login -u ${{ inputs.username }} --password-stdin ${{ inputs.registry-server }}
-        shell: bash
+        uses: docker/login-action@v3
+        with:
+            registry: ${{ inputs.registry-server }}
+            username: ${{ inputs.username }}
+            password: ${{ inputs.password }}
       - name: Docker build images
         run: |
            docker buildx build \
