--- a/action.yaml
+++ b/action.yaml
@@ -51,9 +51,10 @@ runs:
            password: ${{ inputs.password }}
       - name: Docker build images
         run: |
+           CLEANED_TAG=$(echo ${{ inputs.image-tag }} | tr -d "/#" )
            docker buildx build \
               --platform ${{ inputs.platforms }} \
-              --tag ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }} \
+              --tag ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$CLEANED_TAG \
               --tag ${{ inputs.registry-server }}/${{ inputs.image-repository }}:latest \
               ${{ inputs.build-options }} \
               ${{ inputs.context }}
