--- a/.github/workflows/make-latest-tag.yaml
+++ b/.github/workflows/make-latest-tag.yaml
@@ -1,4 +1,4 @@
-name: make-latest-tag.yaml
+name: make latest tag
 
 on:
   push:
@@ -7,12 +7,14 @@ on:
 
 jobs:
   make-go-tag:
-    name: Make a latest tag
+    name: make a latest tag
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: "0"
-      - name: Run latest-tag
-        uses: EndBug/latest-tag@latest
+
+      - name: run latest-tag
+        uses: EndBug/latest-tag@v1.6.2
