--- a/.github/workflows/make-latest-tag.yaml
+++ b/.github/workflows/make-latest-tag.yaml
@@ -5,6 +5,9 @@ on:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 
+permissions:
+  contents: write
+
 jobs:
   make-go-tag:
     name: make a latest tag
