--- a/action.yaml
+++ b/action.yaml
@@ -40,8 +40,8 @@ runs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
       # https://github.com/docker/setup-qemu-action/issues/198
-      with:
-        image: tonistiigi/binfmt:qemu-v7.0.0-28
+      # with:
+      #  image: tonistiigi/binfmt:qemu-v7.0.0-28
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
