--- a/action.yaml
+++ b/action.yaml
@@ -64,7 +64,7 @@ runs:
         username: ${{ inputs.username }}
         password: ${{ inputs.password }}
 
-    - if: ${{ inputs.login-to-ecr != 'true' }}
+    - if: ${{ inputs.login-to-ecr == 'true' }}
       name: configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -73,7 +73,7 @@ runs:
         role-to-assume: ${{ inputs.role-to-assume }}
 
     - id: login-ecr-public
-      if: ${{ inputs.login-to-ecr != 'true' }}
+      if: ${{ inputs.login-to-ecr == 'true' }}
       name: login to Amazon ECR Public
       uses: aws-actions/amazon-ecr-login@v2
       with:
