--- a/action.yaml
+++ b/action.yaml
@@ -38,6 +38,9 @@ inputs:
     description: AWS role session name, required for ECR login
   role-to-assume:
     description: AWS role to assume, required for ECR login
+  sign-image:
+    default: false
+    description: Sign and add attestations to the built image (true or false).
   username:
     description: Username for Docker registry
 
@@ -56,15 +59,18 @@ runs:
     - name: set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Install Cosign
+      uses: sigstore/cosign-installer@v3
+
     - if: ${{ inputs.login-to-dockerhub }}
-      name: dockerhub login
+      name: DockerHub login
       uses: docker/login-action@v3
       with:
         registry: ${{ inputs.registry-server }}
         username: ${{ inputs.username }}
         password: ${{ inputs.password }}
 
-    - if: ${{ inputs.login-to-ecr == 'true' }}
+    - if: ${{ inputs.login-to-ecr }}
       name: configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -73,7 +79,7 @@ runs:
         role-to-assume: ${{ inputs.role-to-assume }}
 
     - id: login-ecr-public
-      if: ${{ inputs.login-to-ecr == 'true' }}
+      if: ${{ inputs.login-to-ecr }}
       name: login to Amazon ECR Public
       uses: aws-actions/amazon-ecr-login@v2
       with:
@@ -84,8 +90,8 @@ runs:
         CLEANED_TAG=$(echo ${{ inputs.image-tag }} | tr -d "/#" )
         tags=""
         if ${{ inputs.login-to-ecr }}; then
-          tags="${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.ecr-image-repository }}:$CLEANED_TAG,"
-          tags="${tags}${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.ecr-image-repository }}:latest,"
+          tags="${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}:$CLEANED_TAG,"
+          tags="${tags}${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}:latest,"
         fi
         tags="${tags}${{ inputs.registry-server }}/${{ inputs.image-repository }}:$CLEANED_TAG,"
         tags="${tags}${{ inputs.registry-server }}/${{ inputs.image-repository }}:latest"
@@ -93,14 +99,74 @@ runs:
         echo "TAGS=${tags}" >> "$GITHUB_ENV"
       shell: bash
 
-    - name: Build and push
+    - id: docker_meta_dockerhub
+      if: ${{ inputs.sign-image && inputs.login-to-dockerhub }}
+      uses: docker/metadata-action@v5.6.1
+      with:
+        images: ${{ inputs.registry-server }}/${{ inputs.image-repository }}
+        tags: |
+          type=semver,pattern={{version}}
+          type=sha,format=long
+
+    - id: docker_meta_ecr
+      if: ${{ inputs.sign-image && inputs.login-to-ecr }}
+      uses: docker/metadata-action@v5.6.1
+      with:
+        images: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
+        tags: |
+          type=semver,pattern={{version}}
+          type=sha,format=long
+
+    - id: build-and-push
+      name: Build and push
       uses: docker/build-push-action@v6
       with:
+        annotations: ${{ steps.docker_meta.outputs.annotations }}
         build-args: ${{ inputs.build-options }}
         context: ${{ inputs.context }}
         platforms: ${{ inputs.platforms }}
         push: ${{ inputs.push }}
         tags: ${{ env.TAGS }}
+
+    - if: ${{ inputs.sign-image && inputs.login-to-dockerhub }}
+      name: Generate DockerHub artifact attestation
+      uses: actions/attest-build-provenance@v2
+      with:
+        push-to-registry: true
+        subject-name: ${{ inputs.registry-server }}/${{ inputs.image-repository }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+
+    - if: ${{ inputs.sign-image && inputs.login-to-ecr }}
+      name: Generate ECR artifact attestation
+      uses: actions/attest-build-provenance@v2
+      with:
+        push-to-registry: true
+        subject-name: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+
+    - if: ${{ inputs.sign-image && inputs.login-to-dockerhub }}
+      name: Sign the DockerHub images with GitHub OIDC Token
+        env:
+          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+          TAGS: ${{ steps.docker_meta.outputs.tags }}
+        run: |
+          images=""
+          for tag in ${TAGS}; do
+            images+="${tag}@${DIGEST} "
+          done
+          cosign sign --yes ${images}
+
+    - if: ${{ inputs.sign-image && inputs.login-to-ecr }}
+      name: Sign the ECR images with GitHub OIDC Token
+        env:
+          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+          TAGS: ${{ steps.docker_meta.outputs.tags }}
+        run: |
+          images=""
+          for tag in ${TAGS}; do
+            images+="${tag}@${DIGEST} "
+          done
+          cosign sign --yes ${images}
 
 branding:
   icon: upload-cloud
