--- a/action.yaml
+++ b/action.yaml
@@ -155,6 +155,7 @@ runs:
           images+="${tag}@${DIGEST} "
         done
         cosign sign --yes ${images}
+      shell: bash
 
     - if: ${{ inputs.sign-image && inputs.login-to-ecr }}
       name: Sign the ECR images with GitHub OIDC Token
@@ -167,6 +168,7 @@ runs:
           images+="${tag}@${DIGEST} "
         done
         cosign sign --yes ${images}
+      shell: bash
 
 branding:
   icon: upload-cloud
