--- a/action.yaml
+++ b/action.yaml
@@ -19,12 +19,10 @@ inputs:
     description: Docker image tag
   login-to-dockerhub:
     default: true
-    description: Bool, login to Dockerhub
-    type: boolean
+    description: Login to Dockerhub
   login-to-ecr:
     default: false
-    description: Bool, login to ECR
-    type: boolean
+    description: Login to ECR
   password:
     description: Access Token for Docker registry
   platforms:
@@ -32,8 +30,7 @@ inputs:
     description: Comma-separated list of docker platforms to build (hint - See output of docker buildx ls)
   push:
     default: false
-    description: Bool, push image to registry
-    type: boolean
+    description: Push image to registry
   registry-server:
     default: docker.io
     description: Docker registry server
@@ -44,7 +41,6 @@ inputs:
   sign-image:
     default: false
     description: Sign and add attestations to the built image (true or false).
-    type: boolean
   username:
     description: Username for Docker registry
 
@@ -66,7 +62,7 @@ runs:
     - name: Install Cosign
       uses: sigstore/cosign-installer@v3
 
-    - if: ${{ inputs.login-to-dockerhub }}
+    - if: ${{ inputs.login-to-dockerhub == 'true' }}
       name: DockerHub login
       uses: docker/login-action@v3
       with:
@@ -74,7 +70,7 @@ runs:
         username: ${{ inputs.username }}
         password: ${{ inputs.password }}
 
-    - if: ${{ inputs.login-to-ecr }}
+    - if: ${{ inputs.login-to-ecr == 'true' }}
       name: configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -83,7 +79,7 @@ runs:
         role-to-assume: ${{ inputs.role-to-assume }}
 
     - id: login-ecr-public
-      if: ${{ inputs.login-to-ecr }}
+      if: ${{ inputs.login-to-ecr == 'true' }}
       name: login to Amazon ECR Public
       uses: aws-actions/amazon-ecr-login@v2
       with:
@@ -93,7 +89,7 @@ runs:
       run: |
         CLEANED_TAG=$(echo ${{ inputs.image-tag }} | tr -d "/#" )
         tags=""
-        if ${{ inputs.login-to-ecr }}; then
+        if ${{ inputs.login-to-ecr == 'true' }}; then
           tags="${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}:$CLEANED_TAG,"
           tags="${tags}${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}:latest,"
         fi
@@ -104,7 +100,7 @@ runs:
       shell: bash
 
     - id: docker_meta_dockerhub
-      if: ${{ inputs.sign-image && inputs.login-to-dockerhub }}
+      if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
       uses: docker/metadata-action@v5.6.1
       with:
         images: ${{ inputs.registry-server }}/${{ inputs.image-repository }}
@@ -113,7 +109,7 @@ runs:
           type=sha,format=long
 
     - id: docker_meta_ecr
-      if: ${{ inputs.sign-image && inputs.login-to-ecr }}
+      if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
       uses: docker/metadata-action@v5.6.1
       with:
         images: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
@@ -132,7 +128,7 @@ runs:
         push: ${{ inputs.push }}
         tags: ${{ env.TAGS }}
 
-    - if: ${{ inputs.sign-image && inputs.login-to-dockerhub }}
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
       name: Generate DockerHub artifact attestation
       uses: actions/attest-build-provenance@v2
       with:
@@ -140,7 +136,7 @@ runs:
         subject-name: ${{ inputs.registry-server }}/${{ inputs.image-repository }}
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
 
-    - if: ${{ inputs.sign-image && inputs.login-to-ecr }}
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
       name: Generate ECR artifact attestation
       uses: actions/attest-build-provenance@v2
       with:
@@ -148,7 +144,7 @@ runs:
         subject-name: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
 
-    - if: ${{ inputs.sign-image && inputs.login-to-dockerhub }}
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
       name: Sign the DockerHub images with GitHub OIDC Token
       env:
         DIGEST: ${{ steps.build-and-push.outputs.digest }}
@@ -161,7 +157,7 @@ runs:
         cosign sign --yes ${images}
       shell: bash
 
-    - if: ${{ inputs.sign-image && inputs.login-to-ecr }}
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
       name: Sign the ECR images with GitHub OIDC Token
       env:
         DIGEST: ${{ steps.build-and-push.outputs.digest }}
