--- a/action.yaml
+++ b/action.yaml
@@ -148,7 +148,7 @@ runs:
       name: Sign the DockerHub images with GitHub OIDC Token
       env:
         DIGEST: ${{ steps.build-and-push.outputs.digest }}
-        TAGS: ${{ steps.docker_meta.outputs.tags }}
+        TAGS: ${{ steps.docker_meta_dockerhub.outputs.tags }}
       run: |
         images=""
         for tag in ${TAGS}; do
@@ -161,7 +161,7 @@ runs:
       name: Sign the ECR images with GitHub OIDC Token
       env:
         DIGEST: ${{ steps.build-and-push.outputs.digest }}
-        TAGS: ${{ steps.docker_meta.outputs.tags }}
+        TAGS: ${{ steps.docker_meta_ecr.outputs.tags }}
       run: |
         images=""
         for tag in ${TAGS}; do
