--- a/action.yaml
+++ b/action.yaml
@@ -131,7 +131,21 @@ runs:
         tags: ${{ env.TAGS }}
 
     - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
-      name: Generate DockerHub artifact attestation
+      uses: anchore/sbom-action@v0.18.0
+      with:
+        format: spdx-json
+        image: ${{ inputs.registry-server }}/${{ inputs.image-repository }}
+        output-file: sbom.json
+
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
+      uses: anchore/sbom-action@v0.18.0
+      with:
+        format: spdx-json
+        image: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
+        output-file: sbom.json
+
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
+      name: Generate DockerHub artifact provenance attestation
       uses: actions/attest-build-provenance@v2
       with:
         push-to-registry: true
@@ -139,12 +153,35 @@ runs:
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
 
     - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
-      name: Generate ECR artifact attestation
+      name: Generate ECR artifact provenance attestation
       uses: actions/attest-build-provenance@v2
       with:
         push-to-registry: true
         subject-name: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
+
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
+      name: Generate SBOM attestation
+      uses: actions/attest-sbom@v1
+      with:
+        subject-name: ${{ inputs.registry-server }}/${{ inputs.image-repository }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+        sbom-path: sbom.json
+        push-to-registry: true
+      
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
+      name: Generate SBOM attestation
+      uses: actions/attest-sbom@v1
+      with:
+        subject-name: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+        sbom-path: sbom.json
+        push-to-registry: true
+
+      - name: Verify Attestation
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: gh attestation verify --repo ${{ github.repository }} oci://ghcr.io/${{ github.repository_owner }}/${{ inputs.app }}@${{ needs.release.outputs.digest }}
 
     - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
       name: Sign the DockerHub images with GitHub OIDC Token
