--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -26,11 +26,11 @@ runs:
         TAGS: ${{ steps.docker_meta_dockerhub.outputs.tags }}
       run: |
         images=""
-        for tag in ${{ inputs.image-tag }}; do
+        for tag in ${{ inputs.image-tags }}; do
           images+="${tag}@${{ inputs.digest }} "
         done
         cosign sign --yes ${images}
         echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }}"
+          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tags }}"
       shell: bash
