--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -23,7 +23,9 @@ runs:
           images+="${tag}@${{ inputs.digest }} "
         done
         cosign sign --yes ${images}
-        echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
+        for tag in ${{ inputs.image-tags }}; do
+          echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ inputs.image-tags }}"
+          ${tag}"
+        done
       shell: bash
