--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -23,9 +23,7 @@ runs:
           images+="${tag}@${{ inputs.digest }} "
         done
         cosign sign --yes ${images}
-        for tag in ${{ inputs.image-tags }}; do
-          echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
+        echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${tag}"
-        done
+          ${{ github.ref }}"
       shell: bash
