--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -6,8 +6,15 @@ inputs:
   digest:
     description: Image digest
     required: true
+  image-repository:
+    description: Docker repository (e.g. senzing/senzingapi-runtime)
+    required: true
   image-tags:
     description: Image tags
+    required: true
+  registry-server:
+    default: docker.io
+    description: Docker registry server
     required: true
 
 runs:
@@ -23,7 +30,7 @@ runs:
           images+="${tag}@${{ inputs.digest }} "
         done
         cosign sign --yes ${images}
-        echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
+        cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ github.ref }}"
+          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$(${{ github.ref }} | cut -d/ -f3)
       shell: bash
