--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -30,6 +30,7 @@ runs:
           images+="${tag}@${{ inputs.digest }} "
         done
         cosign sign --yes ${images}
+        echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com --certificate-identity=https://github.com/${{ github.workflow_ref }} ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$(${{ github.ref }} | cut -d/ -f3)"
         cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
           ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$(${{ github.ref }} | cut -d/ -f3)
