--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -30,8 +30,10 @@ runs:
           images+="${tag}@${{ inputs.digest }} "
         done
         cosign sign --yes ${images}
-        echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com --certificate-identity=https://github.com/${{ github.workflow_ref }} ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$(${{ github.ref }} | cut -d/ -f3)"
+        cleaned_tag=$(${{ github.ref }} | cut -d/ -f3)
+        echo "[INFO] cleaned tag is $cleaned_tag"
+        echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com --certificate-identity=https://github.com/${{ github.workflow_ref }} ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$cleaned_tag"
         cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$(${{ github.ref }} | cut -d/ -f3)
+          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:$cleaned_tag
       shell: bash
