--- a/action.yaml
+++ b/action.yaml
@@ -162,6 +162,9 @@ runs:
         echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
           ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }}"
+        cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
+          --certificate-identity=https://github.com/${{ github.workflow_ref }} \
+          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }}
       shell: bash
 
     #- if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
