--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -29,8 +29,8 @@ runs:
       name: Sign the DockerHub images with GitHub OIDC Token
       run: |
         images=""
-        for tag in ${TAGS}; do
-          images+="${tag}@${DIGEST} "
+        for tag in ${{ inputs.image-tags }}; do
+          images+="${tag}@${{ inputs.digest }} "
         done
         cosign sign --yes ${images}
 
