--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -25,8 +25,11 @@ runs:
   steps:
     - name: Sign the DockerHub images with GitHub OIDC Token
       run: |
+        set -x
         images=""
+        echo "[INFO] image tags: ${{ inputs.image-tags }}"
         while IFS= read -r line; do
+          echo "[INFO] line: $line"
           images+="${line}@${{ inputs.digest }} "
           echo "[INFO] images: $images"
         done <<< ${{ inputs.image-tags }}
