--- a/action.yaml
+++ b/action.yaml
@@ -160,6 +160,7 @@ runs:
           images+="${tag}@${DIGEST} "
           echo "[INFO] images: $images"
         done
+        echo "[INFO] cosign sign --yes ${images}"
         cosign sign --yes ${images}
         echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
