--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -38,8 +38,10 @@ runs:
         #  images+="${tag}@${{ inputs.digest }} "
         #  echo "[INFO] images: $images"
         #done
+
+        echo "[INFO] images final: $images"
         echo "[INFO] cosign sign --yes ${images}"
-        cosign sign --yes ${images}
+        cosign sign --yes "${images}"
 
         echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
           --certificate-identity=https://github.com/${{ github.workflow_ref }} \
