--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -28,11 +28,11 @@ runs:
         #set -x
         images=""
         echo "[INFO] image tags: ${{ inputs.image-tags }}"
-        while IFS= read -r line; do
+        while IFS= read -r line || [[ -n $line ]]; do
           echo "[INFO] line: $line"
           images+="${line}@${{ inputs.digest }} "
           echo "[INFO] images: $images"
-        done <<< "${{ inputs.image-tags }}"
+        done  < <(printf '%s' "${{ inputs.image-tags }}")
 
         #for tag in ${{ inputs.image-tags }}; do
         #  images+="${tag}@${{ inputs.digest }} "
