--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -25,7 +25,7 @@ runs:
   steps:
     - name: Sign the DockerHub images with GitHub OIDC Token
       run: |
-        #set -x
+        set -x
         images=""
         echo "[INFO] image tags: ${{ inputs.image-tags }}"
         while IFS= read -r line || [[ -n $line ]]; do
