--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -28,7 +28,7 @@ runs:
         set -x
         images=""
         echo "[INFO] image tags: ${{ inputs.image-tags }}"
-        while IFS= read -r line || [[ -n $line ]]; do
+        while IFS= read -r line; do
           echo "[INFO] line: $line"
           images+="${line}@${{ inputs.digest }} "
           echo "[INFO] images: $images"
